# Uncertainty-Representation-in-LLMs

./: README.md  X_4096.npy  classification_plane.npz  cv_f1_table.csv  linear_probe.joblib  margin_direction_t.pt  misclassified_examples.csv  probe.ipynb  projection_w_perp.npy  pyproject.toml  qwen1.5rollouts.ipynb  rollout.ipynb  uids.npy  y_labels.npy
