[project]
name = "uncertainty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "datasets>=2.2.1",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "math-verify[antlr4-13-2]>=0.8.0",
    "nnsight>=0.5.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "skorch>=1.2.0",
    "thundersvm>=0.3.12",
]
